--- a/html/cl.html
+++ b/html/cl.html
@@ -14,13 +14,13 @@
     <link rel="stylesheet" href="../css/reset.css">
     <link rel="stylesheet" href="../css/component.css">
     <style>
-        header .project-title-info .title-h1 {text-align: center; border-bottom: 1px solid black;}
-        .main {display: flex;}
+        header {position:sticky; top: 0; background-color: #fff;}
+        header .project-title-info .title-h1 {padding: 30px 0; text-align: center; border-bottom: 1px solid black;}
+        .main {display: flex; }
         .main aside {max-width: 400px; width: 100%;}
-        .main .container {width: 100%; height: 100%; flex-grow: 1;}
-        .main .container .iframe-info {width: 100%; height: 100vh;}
+        .main .container {width: 100%; height: 100%; overflow: hidden; flex-grow: 1;}
+        .main .container .iframe-info {width: 100%; height: calc(100vh - 112px);}
         .main .container .iframe-info iframe {width: 100%; height: 100%;}
-
         .component-menu-info .list-item {display: flex;}
         .component-menu-info .list-item a {padding: 15px 20px;}
 
@@ -37,71 +37,71 @@
             <aside class="component-menu-info">
                 <ul class="component-menu-list">
                     <li class="list-item">
-                        <a class="font-size-16" href="./components/BrandAsset.html">Brand Asset</a>
+                        <a class="text-b2" href="./components/BrandAsset.html">Brand Asset</a>
                     </li>
                     <li class="list-item">
-                        <a class="font-size-16" href="./components/Typography.html">Typography</a>
+                        <a class="text-b2" href="./components/Typography.html">Typography</a>
                     </li>
                     <li class="list-item">
-                        <a class="font-size-16" href="#">Color</a>
+                        <a class="text-b2" href="./components/Color.html">Color</a>
                     </li>
                     <li class="list-item">
-                        <a class="font-size-16" href="#">Icon</a>
+                        <a class="text-b2" href="./components/Icon.html">Icon</a>
                     </li>
                     <li class="list-item">
-                        <a class="font-size-16" href="#">Pagination</a>
+                        <a class="text-b2" href="#">Pagination</a>
                     </li>
                     <li class="list-item">
-                        <a class="font-size-16" href="#">Button</a>
+                        <a class="text-b2" href="#">Button</a>
                     </li>
                     <li class="list-item">
-                        <a class="font-size-16" href="#">Tags</a>
+                        <a class="text-b2" href="#">Tags</a>
                     </li>
                     <li class="list-item">
-                        <a class="font-size-16" href="#">Input</a>
+                        <a class="text-b2" href="#">Input</a>
                     </li>
                     <li class="list-item">
-                        <a class="font-size-16" href="#">Text Area</a>
+                        <a class="text-b2" href="#">Text Area</a>
                     </li>
                     <li class="list-item">
-                        <a class="font-size-16" href="#">Radio Button</a>
+                        <a class="text-b2" href="#">Radio Button</a>
                     </li>
                     <li class="list-item">
-                        <a class="font-size-16" href="#">Check Box</a>
+                        <a class="text-b2" href="#">Check Box</a>
                     </li>
                     <li class="list-item">
-                        <a class="font-size-16" href="#">Drop Down</a>
+                        <a class="text-b2" href="#">Drop Down</a>
                     </li>
                     <li class="list-item">
-                        <a class="font-size-16" href="#">Quantity</a>
+                        <a class="text-b2" href="#">Quantity</a>
                     </li>
                     <li class="list-item">
-                        <a class="font-size-16" href="#">DatePicker</a>
+                        <a class="text-b2" href="#">DatePicker</a>
                     </li>
                     <li class="list-item">
-                        <a class="font-size-16" href="../html/components/Accordion.html">Accordion</a>
+                        <a class="text-b2" href="../html/components/Accordion.html">Accordion</a>
                     </li>
                     <li class="list-item">
-                        <a class="font-size-16" href="#">Slider</a>
+                        <a class="text-b2" href="#">Slider</a>
                     </li>
                     <li class="list-item">
-                        <a class="font-size-16" href="#">List Style</a>
+                        <a class="text-b2" href="#">List Style</a>
                     </li>
                     <li class="list-item">
-                        <a class="font-size-16" href="#">LayerPopup</a>
+                        <a class="text-b2" href="#">LayerPopup</a>
                     </li>
                     <li class="list-item">
-                        <a class="font-size-16" href="#">Tab</a>
+                        <a class="text-b2" href="#">Tab</a>
                     </li>
                     <li class="list-item">
-                        <a class="font-size-16" href="#">Table</a>
+                        <a class="text-b2" href="#">Table</a>
                     </li>
                 </ul>
             </aside>
             <div class="container">
                 <div class="inner">
                     <div class="iframe-info">
-                        <iframe src="./components/BrandAsset.html" frameborder="0"></iframe>
+                        <iframe src="./components/Typography.html" frameborder="0"></iframe>
                     </div>
                 </div>
             </div>
@@ -117,12 +117,23 @@
         function init() {
             const pageURLList = document.querySelectorAll('.component-menu-info a');
             const container = document.querySelector('.iframe-info iframe');
+            let selected;
 
             pageURLList.forEach(link => {
                 link.addEventListener('click', (e) => {
                     e.preventDefault();
 
-                    container.setAttribute('src', e.currentTarget.getAttribute('href'));
+                    let href = e.currentTarget.getAttribute('href');
+
+                    if(selected) selected.classList.remove('bold');
+
+                    link.parentNode.classList.add('bold');
+                    selected = link.parentNode;
+
+                    if(href === '#' || href === '') return;
+                    container.setAttribute('src', href);
+
+
                 })
             })
         }
